# tor-artifact-collector

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: run_demo.sh
src/: artifact_locator.py  cli.py  config.py  correlation.py  hashing.py  logging_utils.py  models.py  normalizers.py
src/extractors/: __init__.py  chrome_history.py  evtx.py  jump_lists.py  places_sqlite.py  places_wal.py  prefetch.py  registry.py  vss.py
tests/: __init__.py  test_cli.py  test_extractors_integration.py  test_models.py  test_normalizers.py  test_registry.py
